[package]
name = "dfu-libusb"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of DFU using libusb and dfu-core"
repository = "https://github.com/dfu-rs/dfu-libusb"
homepage = "https://github.com/dfu-rs/dfu-libusb"
documentation = "https://docs.rs/dfu-libusb"
readme = "README.md"
keywords = ["dfu", "libusb"]

[[bin]]
name = "dfu"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", optional = true }
dfu-core = { version = "0.1", features = ["std"] }
indicatif = { version = "0.16", optional = true }
libusb1-sys = "0.5"
rusb = "0.8"
structopt = { version = "0.3", optional = true }
thiserror = "1"

[features]
default = ["cli"]
cli = ["anyhow", "indicatif", "structopt"]
