[package]
name = "dfu-libusb"
version = "0.5.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of DFU using libusb and dfu-core"
repository = "https://github.com/dfu-rs/dfu-libusb"
homepage = "https://github.com/dfu-rs/dfu-libusb"
documentation = "https://docs.rs/dfu-libusb"
readme = "README.md"
keywords = ["dfu", "libusb"]

[dependencies]
dfu-core = { version = "0.6", features = ["std"] }
libusb1-sys = "0.6"
rusb = "0.9"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
indicatif = "0.16"
simplelog = "0.12"
clap = { version = "3.2", features = ["derive"] }
